# qtcpp_cmake

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
